# OpenManus

./: pyproject.toml  setup.py
app/: __init__.py  config.py  llm.py  logger.py  schema.py
app/agent/: __init__.py  base.py  browser.py  cot.py  manus.py  mcp.py  planning.py  react.py  swe.py  toolcall.py
app/flow/: __init__.py  base.py  flow_factory.py  planning.py
app/libs/redis_adapter/: __init__.py
app/mcp/: __init__.py  server.py
app/memory/: memory.py  redis.py
app/sandbox/: __init__.py  client.py
app/sandbox/core/: manager.py  sandbox.py
app/tool/: __init__.py  ask_human.py  bash.py  browser_use_tool.py  create_chat_completion.py  deep_research.py  file_operators.py  file_saver.py  mcp.py  planning.py  python_execute.py  str_replace_editor.py  terminal.py  terminate.py  tool_collection.py  web_search.py
app/tool/search/: __init__.py  baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py
libs/redis_adapter/: main.py
