[project]
name = "openmanus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles~=24.1.0",
    "baidusearch~=1.0.3",
    "boto3~=1.37.16",
    "browser-use~=0.1.40",
    "browsergym~=0.13.3",
    "colorama~=0.4.6",
    "datasets~=3.2.0",
    "docker~=7.1.0",
    "duckduckgo-search~=7.5.1",
    "fastapi~=0.115.11",
    "googlesearch-python~=1.3.0",
    "gymnasium~=1.0.0",
    "html2text~=2024.2.26",
    "httpx>=0.27.0",
    "loguru~=0.7.3",
    "mcp~=1.4.1",
    "numpy>=2.2.4",
    "openai~=1.66.3",
    "pillow~=10.4.0",
    "playwright~=1.50.0",
    "pydantic-core~=2.27.2",
    "pydantic~=2.10.6",
    "pytest-asyncio~=0.25.3",
    "pytest~=8.3.5",
    "pyyaml~=6.0.2",
    "redis>=5.2.1",
    "tenacity~=9.0.0",
    "tiktoken~=0.9.0",
    "tomli>=2.0.0",
    "unidiff~=0.7.5",
    "uvicorn~=0.34.0",
]
